fixed align

--- a/intro/intro.css
+++ b/intro/intro.css
@@ -133,7 +133,7 @@ body {
     width: 100%;
     height: 100px;
     top: 50vh;
-    margin-top: -5vh;
+    margin-top: -5.5vh;
     text-align: center;
     font: 400 15vh/1em Bluescreens;
     text-transform: uppercase;
