--- a/now/artist.css
+++ b/now/artist.css
@@ -66,7 +66,7 @@ body > * {
     width: 100%;
     position: absolute;
     left: 0;
-    top: 2.5vh;
+    top: 2vh;
     font: 700 16vh/1em Bluescreens, sans-serif;
     text-transform: uppercase;
     white-space: nowrap;
